add multi-source config override via command line, .env and env vars